--- a/3-semantic-html/semantic.html
+++ b/3-semantic-html/semantic.html
@@ -53,17 +53,18 @@
         </aside>
 
         <footer>
-            <address>
-            <p>Made by: wRattlehead316</p>
+                <p>You can contact the author here:</p>
+                    <address>
+                            <a href="https://www.linkedin.com/in/jaimemoreno97/"> LinkedIn</a>
+                            <a href="https://www.facebook.com/jaimeandres97"> Facebook</a>
+                     </address>
+                <p>Content related:</p>
                 <nav>
-                    <p>You can contact the author here:</p>
-                        <ol>
-                            <li><a href="https://www.linkedin.com/in/jaimemoreno97/"> LinkedIn</a></li>
-                            <li><a href="https://www.facebook.com/jaimeandres97"> Facebook</a></li>
-
-                    </ol>
+                    <ul>
+                    <li><a href="https://edition.cnn.com/2009/HEALTH/05/27/10.rare.diseases/"> Strange Diseases</a></li>
+                    </ul>
                 </nav>
-            </address>
+            <p>Made by: wRattlehead316</p>
         </footer>
     </body>
 </html>
