--- a/form.html
+++ b/form.html
@@ -66,7 +66,7 @@
                         <p>Please enter a message (optional):</p>
                         <label for="text_area"></label>
                         <textarea id="text_area" name="msg" cols="75" rows="5"></textarea><br>
-                        <button type="submit">Send message</button>
+                        <button>Send message</button>
                         <button type="reset">Reset form</button>
                     </form>
                 </section>
